--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
 						<a class="nav-link" href="About.html">About</a>
 					</li>
 					
-					<li class="nav-item">
+					<li class="nav-item contact">
 						<a class="nav-link active" href="contact.html">Contact Us</a>
 					</li>
 
